# activitywatch

./: .gitignore  generate_report.bat  launch.py  pyproject.toml  requirements.txt  start.bat  start_silent.bat  start_silent.vbs  stop_activitywatch.bat
aw-client/aw_client/: classes.py  queries.py
aw-client/tests/: test_client.py
aw-pywebview/: pyproject.toml
aw-pywebview/aw_pywebview/: api.py  cli.py  data.py  main.py  manager.py  report.py  scheduler.py  server_info.py  settings.py
aw-pywebview/aw_pywebview/ui/: app.js  index.html  style.css
aw-pywebview/aw_pywebview/ui/charts/: hourlyStackedBarChart.js
aw-pywebview/aw_pywebview/ui/renderers/: inputSummary.js
aw-pywebview/aw_pywebview/ui/utils/: colors.js  formatters.js  html.js
aw-pywebview/tests/: test_api_dashboard.py  test_input_dashboard_data.py  test_manager.py  test_server_info.py  test_ui_contract.py  test_visualization_data.py  test_windows_app_name_resolution.py
aw-server/aw-webui/src/: queries.ts
aw-server/aw-webui/src/components/: SelectableVisualization.vue
aw-server/aw_server/: rest.py
aw-watcher-input/: pyproject.toml
aw-watcher-input/aw_watcher_input/: config.py  main.py  windows.py
aw-watcher-input/tests/: test_main.py  test_windows_context.py
aw-watcher-window/aw_watcher_window/: lib.py  main.py  windows.py
aw-watcher-window/tests/: test_main.py  test_windows_lib.py
